Re-implemented timeline to streaming mode, many UX improvements and fixes